2011-04-09 Borut Razem <borut.razem AT gmail.com>

	* src/z80/gen.c: sync with optralloc branch
	* src/port.h: cosmetic changes

2011-04-09 Borut Razem <borut.razem AT gmail.com>

	* sim/ucsim/cmd.src/cmdpars.y: removed warnings
	* support/regression/tests/logic.c, src/SDCCpeeph.c, src/SDCCasm.c,
	  src/SDCCicode.c, src/SDCCglobl.h, src/SDCCsystem.c:
	  sync with optralloc branch

2011-04-07 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/mcs51/Makefile.in,
	* device/lib/mcs51/crtxpopbits.asm, device/lib/mcs51/crtxpopr0.asm: renamed
	* device/lib/mcs51/crtxpop.asm,
	* device/lib/mcs51/crtxpush.asm,
	* device/lib/mcs51/crtxpushr0.asm,
	* src/mcs51/gen.c (xstackRegisters, saveRegisters, unsaveRegisters,
	  genSend): fixed for new register order

2011-03-31 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/ralloc.c (regs8051, serialRegAssign),
	* src/mcs51/ralloc.h: prefer to use adjacent ascending registers

2011-03-27 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/linksrc/lklex.c,
	* src/SDCCast.c: small fixes

2011-03-28 Borut Razem <borut.razem AT gmail.com>

	* src/z80/gen.c: fixed bug, introduced during code cleaning

2011-05-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/SDCCval.c,
	  src/SDCCval.h,
	  src/SDCC.y,
	  src/SDCCglue.c,
	  src/pic14/glue.c,
	  src/pic16/glue.c,
	  src/SDCCast.c:
	  Support for designated initializers, thanks C. Scott and R. Quattlebaum.

2011-03-27 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/as6808/m08mch.c,  sdas/as6808/m08pst.c,
	* sdas/as8051/i51mch.c,  sdas/as8051/i51pst.c,
	* sdas/asgb/gbmch.c,     sdas/asgb/gbpst.c,
	* sdas/asz80/z80mch.c,   sdas/asz80/z80pst.c,
	* sdas/asxxsrc/asdata.c, sdas/asxxsrc/asexpr.c,
	* sdas/asxxsrc/aslist.c, sdas/asxxsrc/asmain.c,
	* sdas/asxxsrc/asout.c,  sdas/asxxsrc/asxxxx.h,
	* sdas/linksrc/aslink.h, sdas/linksrc/lkaomf51.c,
	* sdas/linksrc/lkar.c,   sdas/linksrc/lkarea.c,
	* sdas/linksrc/lkdata.c, sdas/linksrc/lkelf.c,